--- a/site/src/styles/WrappedStories-responsive.css
+++ b/site/src/styles/WrappedStories-responsive.css
@@ -791,7 +791,7 @@
   }
 
   .metric-label {
-    font-size: 0.6rem;
+    font-size: 0.42rem;
   }
 
   .summary-metrics {
